@@ -36,12 +36,11 @@ define( function( require ) {
     var self = this;
     Node.call( this );
 
-    this.aligner = aligner;
-    this.equationProperty = equationProperty;
-    this.balancedHighlightEnabled = true;
+    this.equationProperty = equationProperty; // @private
+    this.balancedHighlightEnabled = true;  // @private
 
     // boxes
-    this.reactantsBoxNode = new BoxNode( coefficientsRange, reactantsBoxExpandedProperty, {
+    var reactantsBoxNode = new BoxNode( coefficientsRange, reactantsBoxExpandedProperty, {
       fill: boxColor,
       title: reactantsString,
       boxWidth: boxSize.width,
@@ -49,9 +48,8 @@ define( function( require ) {
       x: aligner.getReactantsBoxLeft(),
       y: 0
     } );
-    this.addChild( this.reactantsBoxNode );
 
-    this.productsBoxNode = new BoxNode( coefficientsRange, productsBoxExpandedProperty, {
+    var productsBoxNode = new BoxNode( coefficientsRange, productsBoxExpandedProperty, {
       fill: boxColor,
       title: productsString,
       boxWidth: boxSize.width,
@@ -59,21 +57,33 @@ define( function( require ) {
       x: aligner.getProductsBoxLeft(),
       y: 0
     } );
-    this.addChild( this.productsBoxNode );
 
-    // right-pointing arrow
+    // @private right-pointing arrow
     this.arrowNode = new RightArrowNode( equationProperty.get().balanced );
     this.arrowNode.center = new Vector2( aligner.getScreenCenterX(), boxSize.height / 2 );
-    this.addChild( this.arrowNode );
 
-    // if the equation changes...
+    // when equation coefficients change ...
+    var coefficientsObserver = function() {
+      var equation = self.equationProperty.get();
+      reactantsBoxNode.updateVisibility( equation.reactants );
+      productsBoxNode.updateVisibility( equation.products );
+      self.arrowNode.setHighlighted( equation.balanced && self.balancedHighlightEnabled );
+    };
+
+    // when the equation changes ...
     equationProperty.link( function( newEquation, oldEquation ) {
-      if ( oldEquation ) { oldEquation.removeCoefficientsObserver( self.updateMolecules.bind( self ) ); }
-      self.updateNode();
-      newEquation.addCoefficientsObserver( self.updateMolecules.bind( self ) );
+
+      // create molecules for the new equation
+      reactantsBoxNode.createMolecules( newEquation.reactants, aligner.getReactantXOffsets( newEquation ) );
+      productsBoxNode.createMolecules( newEquation.products, aligner.getProductXOffsets( newEquation ) );
+
+      // wire up coefficients observer
+      if ( oldEquation ) { oldEquation.removeCoefficientsObserver( coefficientsObserver ); }
+      newEquation.addCoefficientsObserver( coefficientsObserver );
     } );
 
-    this.mutate( options );
+    options.children = [ reactantsBoxNode, productsBoxNode, this.arrowNode ];
+    Node.call( this, options );
   }
 
   return inherit( Node, BoxesNode, {
@@ -87,29 +97,8 @@ define( function( require ) {
     setBalancedHighlightEnabled: function( enabled ) {
       if ( enabled !== this.balancedHighlightEnabled ) {
         this.balancedHighlightEnabled = enabled;
-        this.arrowNode.setHighlighted( this.equationProperty.get().balanced && this.balancedHighlightEnabled );
+        this.arrowNode.setHighlighted( enabled && this.equationProperty.get().balanced );
       }
-    },
-
-    /**
-     * Creates new equation molecules.
-     * @private
-     */
-    updateNode: function() {
-      var equation = this.equationProperty.get();
-      this.reactantsBoxNode.createMolecules( equation.reactants, this.aligner.getReactantXOffsets( equation ) );
-      this.productsBoxNode.createMolecules( equation.products, this.aligner.getProductXOffsets( equation ) );
-    },
-
-    /**
-     * Updates the number of visible molecules and arrow highlighting.
-     * @private
-     */
-    updateMolecules: function() {
-      var equation = this.equationProperty.get();
-      this.reactantsBoxNode.updateMolecules( equation.reactants );
-      this.productsBoxNode.updateMolecules( equation.products );
-      this.arrowNode.setHighlighted( equation.balanced && this.balancedHighlightEnabled );
     }
   } );
 } );
