@@ -1,3 +1,4 @@
+7/16/14 clean up BoxNode and BoxesNode
 7/16/14 clean up BarNode
 7/16/14 clean up FulcrumNode
 7/16/14 simplify how equation interactivity is disabled in the game, use pickable:false
